// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBarMenuItem рендерит выбранный пункт меню в развернутом сайдбаре 1`] = `
<div>
  <a
    class="css-aykm5y-SideBarMenuItem"
    href="/mainPath"
  >
    <div
      class="css-12inr7s"
      title="MenuItem1"
    >
      <div
        data-testid="iconNodeId"
      >
        icon
      </div>
    </div>
    <span
      class="root sizeM alignStart colorPrimary weightRegular css-c5qcjo noWrap"
    >
      MenuItem1
    </span>
  </a>
  <a
    class="css-iq5djz-SideBarMenuItem"
    href="/selectedPath"
  >
    <div
      class="css-1e1mock-SideBarMenuItem"
      title="MenuItem2"
    >
      <div
        data-testid="iconNodeId"
      >
        icon
      </div>
    </div>
    <span
      class="root sizeM alignStart colorPrimary weightRegular css-dnwjgb-SideBarMenuItem noWrap"
    >
      MenuItem2
    </span>
  </a>
  <a
    class="css-aykm5y-SideBarMenuItem"
    href="/anotherPath"
  >
    <div
      class="css-12inr7s"
      title="MenuItem3"
    >
      <div
        data-testid="iconNodeId"
      >
        icon
      </div>
    </div>
    <span
      class="root sizeM alignStart colorPrimary weightRegular css-c5qcjo noWrap"
    >
      MenuItem3
    </span>
  </a>
</div>
`;

exports[`SideBarMenuItem рендерит выбранный пункт меню в свернутом сайдбаре 1`] = `
<div>
  <a
    class="css-cddf60-SideBarMenuItem"
    href="/mainPath"
  >
    <div
      class="css-12inr7s"
      title="MenuItem1"
    >
      <div
        data-testid="iconNodeId"
      >
        icon
      </div>
    </div>
  </a>
  <a
    class="css-1jxjogs-SideBarMenuItem"
    href="/selectedPath"
  >
    <div
      class="css-1e1mock-SideBarMenuItem"
      title="MenuItem2"
    >
      <div
        data-testid="iconNodeId"
      >
        icon
      </div>
    </div>
  </a>
  <a
    class="css-cddf60-SideBarMenuItem"
    href="/anotherPath"
  >
    <div
      class="css-12inr7s"
      title="MenuItem3"
    >
      <div
        data-testid="iconNodeId"
      >
        icon
      </div>
    </div>
  </a>
</div>
`;
